--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/cli": "^7.25.9",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
