--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/CaltechOpticalObservatories/cosmos#readme",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "next": "^14.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
